# phpspy

./: .gitignore  .pyroscope_api.c.swp  CMakeLists.txt  Dockerfile  Makefile  Makefile_tests  README.md  addr_objdump.c  dev.Dockerfile  docker-compose.yml  event_callgrind.c  event_fout.c  gtest_main.cpp  main.php  pgrep.c  phpspy.c  phpspy.h  phpspy_trace.c  playground.c  pyroscope_api.c  pyroscope_api.h  pyroscope_api_struct.h  pyroscope_api_tests.cpp  run_pyroscope_api_tests.sh  run_tests.sh  sandbox.c  test.c
lib/: Makefile  phpspy.c  pyroscope_api.c  pyroscope_api.h  uthash.h
lib/tests/pyroscope_api/: pyroscope_api_tests.cpp
tests/pyroscope_api/: main.php  main_chdir.php  pyroscope_api_tests.cpp
